# async-mongoengine

./: .gitignore  .pre-commit-config.yaml  .worktreeinclude  CLAUDE.md  README.md  README.rst  conftest.py  convert_to_async.py  pyproject.toml  requirements-dev.txt  ruff.toml  setup.cfg  setup.py
async_mongoengine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
benchmarks/: bench_baseline.py  bench_hypothesis_fast_init.py  bench_hypothesis_fast_to_python.py  bench_hypothesis_to_mongo.py  bench_mongodb.py  bench_perf_flags.py  run_all.py
docs/: apireference.rst  conf.py  faq.rst  index.rst  migration-guide.md  tutorial.rst
docs/async/: README.md
docs/code/: tumblelog.py
docs/guide/: connecting.rst  defining-documents.rst  document-instances.rst  index.rst  installing.rst  logging-monitoring.rst  migration.rst  querying.rst  signals.rst  text-indexes.rst  validation.rst
docs/optimizations/: README.md  deserialization_and_validation.md  from_son_optimization.md
mongoengine/: __init__.py  common.py  connection.py  context_managers.py  dereference.py  document.py  errors.py  fields.py  mongodb_support.py  pymongo_support.py  signals.py
mongoengine/base/: common.py  datastructures.py  document.py  fields.py  metaclasses.py  perf_config.py  utils.py
mongoengine/queryset/: __init__.py  aggregation.py  base.py  field_list.py  manager.py  (+3 more)
tests/: fixtures.py  test_changelog_consistency.py  test_connection.py  test_connection_mongomock.py  test_context_managers.py  test_datastructures.py  test_dereference.py  test_pymongo_support.py  test_signals.py  utils.py
(+64 files in other folders)
