[project]
name = "async-mongoengine"
version = "0.1.0"
description = "Async MongoEngine — Python Object-Document Mapper for MongoDB with native async support."
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pymongo>=4.10"]

[project.optional-dependencies]
signals = ["blinker>=1.6"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "coverage",
    "blinker>=1.6",
    "ruff",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mongoengine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingTypeStubs = false

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501", "F403", "F405"]

[tool.ruff.lint.isort]
known-first-party = ["mongoengine", "tests"]
